--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 !.gitkeep
 .vscode/settings.json
+.vscode/launch.json
 docker/mysql/data/*
 src/resources/views/test.blade.php
 src/public/scss/test.scss
